fixed whitespace by meta in html

--- a/style.css
+++ b/style.css
@@ -7,18 +7,7 @@ body {
     margin-bottom: 0px;
     overflow-x: hidden;
 }
-footer{
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
-html,body {
-  width: 100%;
-  height: 100%;
-  margin: 0px;
-  padding: 0px;
-  overflow-x: hidden;
-}
+
 img{
     border-radius: 50%;
 }
